cmake_minimum_required(VERSION 3.25)
project(OSLib)
set(CMAKE_C_STANDARD 11)
set(CMAKE_C_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_compile_options(-Wall -Wextra -Werror -pthread)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")

add_executable(mutiprcs1 part1/1.1_1_multiprocs.c)
add_executable(mutiprcs2 part1/1.1_2_multiprocs.c)
add_executable(system_call part1/system_call.c)
add_executable(concurrency part1/1.2_concurrency.c)
add_executable(lock part1/1.3_lock.c)
add_executable(signal part2/2.1signalll.c)
add_executable(xlx part2/xlx.c)
add_executable(test part2/testsig.c)